Text is misplaced when custom font does not have space glyph. https://bugs.webkit.org/show_bug.cgi?id=144879

Reviewed by Myles C. Maxfield

This patch ensures that we use fallback font for the missing space glyph only when the rendered text has space in it.

If a font does not provide all the glyphs required to render the associated text, we initiate fallback fonts. It is done while
measuring the text at layout time. However due to the fact that we always pre-measure space, a font with no space glyph in it is never sufficient.
(even when the text does not require space at all)
Fallback fonts impact line positions through ascent/descent calculation.

Source/WebCore:

Test: fast/text/font-with-no-space-glyph.html

* rendering/RenderText.cpp:
(WebCore::RenderText::computePreferredLogicalWidths):
* rendering/line/BreakingContext.h:
(WebCore::WordTrailingSpace::WordTrailingSpace):
(WebCore::WordTrailingSpace::width):
(WebCore::BreakingContext::handleText):

LayoutTests:

* fast/ruby/ruby-expansion-cjk-2-expected.html: progression
* fast/ruby/ruby-expansion-cjk-3-expected.html: progression
* fast/ruby/ruby-expansion-cjk-4-expected.html: progression
* fast/ruby/ruby-expansion-cjk-5-expected.html: progression
* fast/ruby/ruby-expansion-cjk-expected.html: progression
* fast/text/font-with-no-space-glyph-expected.html: Added.
* fast/text/font-with-no-space-glyph.html: Added.
* platform/mac/svg/fonts/svg-font-general-expected.html: progression


Canonical link: https://commits.webkit.org/162938@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184150 268f45cc-cd09-0410-ab3c-d52691b4dbfc